--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,4 +1,31 @@
-body, h1, h2, h3, h4, h5, h6, p, ul, ol {
-    margin: 0;
-    padding: 0;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --main-bg-color: #f8f8f8;
+  --secondary-bg-color: #ddd;
+  --font-color: #21211f;
+  --secondary-font-color: #0d0d0d;
+  --boder-color: #bfbdb6;
+  --medium-aqua-marine: #54d4a0;
+  --black-gradient: rgba(11, 11, 11, 0.9);
+  --black-gradient-full: rgba(11, 11, 11, 1);
+  --font-family-main: "Inter", Avenir, Helvetica, Arial, sans-serif;
+  --font-family-secondary: "Raleway", Avenir, Helvetica, Arial, sans-serif;
+  --font-family-tertiary: "Open Sans", Avenir, Helvetica, Arial, sans-serif;
+}
